--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="cs">
-<head>
-    <meta charset="UTF-8">
-    <title>Klik na úklid</title>
-</head>
-<body>
-
-<h1>Klik na úklid</h1>
-<p>Funguje to 🔥</p>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="cs"><head><meta charset="UTF-8"><title>Klik na úklid</title></head><body><h1>Klik na úklid</h1><p>Funguje to 🔥</p></body></html>
