--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<!DOCTYPE html><html lang="cs"><head><meta charset="UTF-8"><title>Klik na úklid</title></head><body><h1>Klik na úklid</h1><p>Funguje to 🔥</p></body></html>
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+    <meta charset="UTF-8">
+    <title>Kliknauklid</title>
+</head>
+<body>
+
+<h1>KLÍK NA ÚKLID 🧹</h1>
+
+<p>Platforma pro propojení ubytovatelů a uklízeček</p>
+
+<hr>
+
+<h2>Poptávky po úklidu</h2>
+<p>Zde budou aktuální poptávky</p>
+
+<h2>Nabídky uklízeček</h2>
+<p>Zde budou nabídky uklízeček</p>
+
+<hr>
+
+<p>Projekt ve vývoji ❤️</p>
+
+</body>
+</html>
