--- a/nabidky.html
+++ b/nabidky.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Nabídky uklízeček – Klik na úklid</title>
+<title>Nabídky úklidu – Klik na úklid</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 20px; }
   h1 { text-align: center; }
@@ -15,14 +15,11 @@
 </head>
 <body>
 
-<h1>Nabídky uklízeček</h1>
+<h1>Nabídky úklidu</h1>
 
 <table id="nabidkyTable">
   <thead>
     <tr>
-      <th>Jméno</th>
-      <th>Telefon</th>
-      <th>Email</th>
       <th>Město</th>
       <th>Typ úklidu</th>
       <th>Dojezd</th>
