--- a/nabidky.html
+++ b/nabidky.html
@@ -24,7 +24,9 @@
       <th>Typ úklidu</th>
       <th>Dojezd</th>
       <th>Dostupnost</th>
+      <th>Zkušenosti</th>
       <th>Cena</th>
+      <th>Poznámka</th>
     </tr>
   </thead>
   <tbody>
