--- a/nabidky.html
+++ b/nabidky.html
@@ -2,66 +2,116 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Nabídky úklidu – Klik na úklid</title>
+<title>Nabídky uklízeček | Klik na úklid</title>
+
 <style>
-  body { font-family: Arial, sans-serif; margin: 20px; }
-  h1 { text-align: center; }
-  table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-  th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-  th { background: #333; color: #fff; }
-  tr:nth-child(even) { background: #f9f9f9; }
-  tr:hover { background: #f1f1f1; }
+body{
+    font-family: Arial, sans-serif;
+    background:#f5f5f5;
+    margin:0;
+    padding:20px;
+}
+
+h1{
+    text-align:center;
+}
+
+table{
+    width:100%;
+    border-collapse:collapse;
+    background:white;
+}
+
+th, td{
+    border:1px solid #ddd;
+    padding:10px;
+    text-align:left;
+}
+
+th{
+    background:#7b2cbf;
+    color:white;
+}
+
+tr:nth-child(even){
+    background:#f2f2f2;
+}
+
+.lock{
+    color:#999;
+    font-style:italic;
+}
 </style>
 </head>
+
 <body>
 
-<h1>Nabídky úklidu</h1>
+<h1>Nabídky uklízeček</h1>
+<p style="text-align:center;">Kontakty jsou dostupné pouze pro registrované ubytovatele 🔒</p>
 
-<table id="nabidkyTable">
-  <thead>
-    <tr>
-      <th>Město</th>
-      <th>Typ úklidu</th>
-      <th>Dojezd</th>
-      <th>Dostupnost</th>
-      <th>Zkušenosti</th>
-      <th>Cena</th>
-      <th>Poznámka</th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- data se vloží sem -->
-  </tbody>
+<table id="data">
+<thead>
+<tr>
+<th>Lokalita</th>
+<th>Zkušenosti</th>
+<th>Dostupnost</th>
+<th>Typ úklidu</th>
+<th>Frekvence</th>
+<th>Vlastní vybavení</th>
+<th>Doprava</th>
+<th>Poznámka</th>
+<th>Kontakt</th>
+</tr>
+</thead>
+<tbody>
+</tbody>
 </table>
 
 <script>
-const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTppWCz9bX9UbhtaJjoJzCVBrZPwCDgfvVbpi71sGEWjZ-PC9isdwz3_HssADFrs1p5Z92FocfJOiBN/pub?output=csv";
+const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTppWCz9bX9UbhtaJjoJzCVBrZPwCDgfvVbpi71sGEWjZ-PC9isdwz3_HssADFrs1p5Z92FocfJOiBN/pubhtml";
 
-fetch(sheetUrl)
-  .then(res => res.text())
-  .then(csv => {
-    const rows = csv.split("\\n").slice(1); // přeskočí hlavičku
-    let html = "";
-    rows.forEach(row => {
-      if (!row.trim()) return; // přeskočit prázdné
-      const cols = row.split(",");
-      html += "<tr>";
-      html += "<td>" + (cols[0] || "") + "</td>"; // Jméno
-      html += "<td>" + (cols[1] || "") + "</td>"; // Telefon
-      html += "<td>" + (cols[2] || "") + "</td>"; // Email
-      html += "<td>" + (cols[3] || "") + "</td>"; // Město
-      html += "<td>" + (cols[4] || "") + "</td>"; // Typ úklidu
-      html += "<td>" + (cols[5] || "") + "</td>"; // Dojezd
-      html += "<td>" + (cols[6] || "") + "</td>"; // Dostupnost
-      html += "<td>" + (cols[7] || "") + "</td>"; // Cena
-      html += "</tr>";
+fetch(sheetURL)
+.then(res => res.text())
+.then(html => {
+    const parser = new DOMParser();
+    const doc = parser.parseFromString(html, 'text/html');
+    const rows = doc.querySelectorAll("table tr");
+
+    const tbody = document.querySelector("#data tbody");
+
+    rows.forEach((row, index) => {
+        if(index === 0) return; // hlavička
+
+        const cells = row.querySelectorAll("td");
+        if(cells.length < 1) return;
+
+        const tr = document.createElement("tr");
+
+        // ⚠️ INDEXY SLOUPCŮ – UPRAVÍME PODLE FORMULÁŘE
+        const lokalita = cells[3]?.innerText || "";
+        const zkusenosti = cells[4]?.innerText || "";
+        const dostupnost = cells[5]?.innerText || "";
+        const typ = cells[6]?.innerText || "";
+        const frekvence = cells[7]?.innerText || "";
+        const vybaveni = cells[8]?.innerText || "";
+        const doprava = cells[9]?.innerText || "";
+        const poznamka = cells[10]?.innerText || "";
+
+        tr.innerHTML = `
+            <td>${lokalita}</td>
+            <td>${zkusenosti}</td>
+            <td>${dostupnost}</td>
+            <td>${typ}</td>
+            <td>${frekvence}</td>
+            <td>${vybaveni}</td>
+            <td>${doprava}</td>
+            <td>${poznamka}</td>
+            <td class="lock">🔒 Kontakt po registraci</td>
+        `;
+
+        tbody.appendChild(tr);
     });
-    document.querySelector("#nabidkyTable tbody").innerHTML = html;
-  })
-  .catch(err => {
-    document.querySelector("body").innerHTML += "<p style='color:red;'>Chyba při načítání dat.</p>";
-    console.error(err);
-  });
+});
 </script>
 
 </body>
