--- a/nabidky.html
+++ b/nabidky.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Nabídky uklízeček | Klik na úklid</title>
+<title>Nabídky úklidu | Klik na úklid</title>
 
 <style>
 body{
@@ -46,7 +46,7 @@ tr:nth-child(even){
 
 <body>
 
-<h1>Nabídky uklízeček</h1>
+<h1>Nabídky úklidu</h1>
 <p style="text-align:center;">Kontakty jsou dostupné pouze pro registrované ubytovatele 🔒</p>
 
 <table id="data">
