--- a/nabidky.html
+++ b/nabidky.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Nabídky uklízeček | Klik na úklid</title>
+<title>Nabídky úklidu | Klik na úklid</title>
 <style>
 body { font-family: Arial, sans-serif; margin: 20px; }
 h1 { text-align: center; }
@@ -16,7 +16,7 @@ tr:nth-child(even) { background: #f9f9f9; }
 
 <body>
 
-<h1>Nabídky uklízeček</h1>
+<h1>Nabídky úklidu</h1>
 <p style="text-align:center;">Kontakty jsou skryté 🔒 (budou viditelné až po registraci nebo zaplacení)</p>
 
 <table id="nabidkyTable">
