Remove payment requirement for contact visibility

--- a/nabidky.html
+++ b/nabidky.html
@@ -19,7 +19,7 @@ tr:nth-child(even) { background: #f9f9f9; }
 
 <h1>Nabídky úklidu</h1>
 <p style="text-align:center;">
-Kontakty jsou skryté 🔒 (budou viditelné až po registraci nebo zaplacení)
+Kontakty jsou skryté 🔒 (budou viditelné až po registraci)
 </p>
 
 <table id="nabidkyTable">
