--- a/nabidky.html
+++ b/nabidky.html
@@ -3,34 +3,66 @@
 <head>
 <meta charset="UTF-8">
 <title>Nabídky úklidu | Klik na úklid</title>
-
 <style>
-body { font-family: Arial, sans-serif; margin: 20px; }
-h1 { text-align: center; }
-table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-th { background-color: #4a148c; color: white; }
-tr:nth-child(even) { background: #f9f9f9; }
-.lock { color: #888; font-style: italic; }
-
-button {
-  background:#4a148c;
-  color:#fff;
-  border:0;
-  padding:6px 10px;
-  cursor:pointer;
-  border-radius:4px;
+body {
+  font-family: Arial, sans-serif;
+  background: #f5f7fb;
+  margin: 0;
+  padding: 30px;
 }
-button:hover { background:#6a1b9a; }
+
+h1 {
+  text-align: center;
+}
+
+.subtitle {
+  text-align: center;
+  color: #666;
+  margin-bottom: 30px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background: white;
+}
+
+th, td {
+  padding: 10px;
+  border: 1px solid #ddd;
+  font-size: 14px;
+  text-align: left;
+}
+
+th {
+  background: #243a8f;
+  color: white;
+}
+
+.unlock-btn {
+  background: #243a8f;
+  color: white;
+  border: none;
+  padding: 6px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.unlock-btn:hover {
+  background: #1a2b6d;
+}
+
+.lock {
+  color: #999;
+  font-style: italic;
+}
 </style>
 </head>
 
 <body>
 
 <h1>Nabídky úklidu</h1>
-<p style="text-align:center;">
-Kontakty jsou skryté 🔒 (po zaplacení se odemknou)
-</p>
+<div class="subtitle">Kontakty jsou skryté 🔒 (po zaplacení se odemknou)</div>
 
 <table id="nabidkyTable">
   <thead>
@@ -46,68 +78,60 @@ Kontakty jsou skryté 🔒 (po zaplacení se odemknou)
       <th>Kontakt</th>
     </tr>
   </thead>
-  <tbody></tbody>
+  <tbody>
+    <!-- data se načtou dynamicky -->
+  </tbody>
 </table>
 
 <script>
-const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRc1EKWsR4iHnhk1PSgVAQ5u_YfM481jOzs9mxzXLvIZ0bhtz0TFRAAzw_15LJhvNSpyzb6dMA6IK0r/pub?output=csv";
+const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRc1EKWsR4iHnhk1PSgVAQ5u_YfM481jOzs9mxzXLvIZ0bhtz0TFRAAzw_15LJhvNSpyzb6dMA6IK0r/pubhtml";
 
-// CSV parser
-function parseCSV(text) {
-  const rows = [];
-  let row = [], cell = "", q = false;
-
-  for (let char of text) {
-    if (char === '"') q = !q;
-    else if (char === "," && !q) {
-      row.push(cell); cell = "";
-    } else if (char === "\n" && !q) {
-      row.push(cell); rows.push(row);
-      row = []; cell = "";
-    } else cell += char;
-  }
-  if (cell) row.push(cell);
-  if (row.length) rows.push(row);
-  return rows;
-}
-
-fetch(sheetUrl)
+/* NAČTENÍ TABULKY */
+fetch(SHEET_URL)
   .then(res => res.text())
-  .then(csv => {
-    const data = parseCSV(csv);
-    const rows = data.slice(1);
-    let html = "";
+  .then(html => {
+    const parser = new DOMParser();
+    const doc = parser.parseFromString(html, "text/html");
+    const rows = doc.querySelectorAll("table tr");
 
-    rows.forEach((cols, i) => {
-      if (!cols.length) return;
+    let htmlRows = "";
+    let id = 1;
 
-      html += `
+    rows.forEach((row, index) => {
+      if(index === 0) return; // přeskočí hlavičku
+
+      const cols = row.querySelectorAll("td");
+      if(cols.length < 8) return;
+
+      htmlRows += `
         <tr>
-          <td>${cols[0] || ""}</td>
-          <td>${cols[4] || ""}</td>
-          <td>${cols[5] || ""}</td>
-          <td>${cols[6] || ""}</td>
-          <td>${cols[7] || ""}</td>
-          <td>${cols[8] || ""}</td>
-          <td>${cols[9] || ""}</td>
-          <td>${cols[10] || ""}</td>
+          <td>${cols[0].innerText}</td>
+          <td>${cols[1].innerText}</td>
+          <td>${cols[2].innerText}</td>
+          <td>${cols[3].innerText}</td>
+          <td>${cols[4].innerText}</td>
+          <td>${cols[5].innerText}</td>
+          <td>${cols[6].innerText}</td>
+          <td>${cols[7].innerText}</td>
           <td>
-            <button onclick="unlockOffer(${i})">
+            <button class="unlock-btn" onclick="unlockOffer(${id})">
               🔓 Odemknout kontakt (99 Kč)
             </button>
           </td>
         </tr>
       `;
+      id++;
     });
 
-    document.querySelector("#nabidkyTable tbody").innerHTML = html;
+    document.querySelector("#nabidkyTable tbody").innerHTML = htmlRows;
   });
 
+/* ODEMKNUTÍ NABÍDKY */
 function unlockOffer(id) {
   const email = prompt("Zadejte e-mail pro zaslání platebních údajů:");
   if (!email) return;
 
-  const url = "https://script.google.com/macros/s/AKfycbye3NJTYvJg11FhOLfdspI9BHQJxMu67KEsm51GUP8Ouc4rlX6jLcEXmv0nFsd0mAhy/exec";
+  const url = "https://script.google.com/macros/s/AKfycbx0sh8gr575WpbdcREz5h7MtHrwV10XFUpsWPluvWGYDD-asd-jD9cBFZVXzNTzMq9c/exec";
 
   const data = new URLSearchParams();
   data.append("email", email);
@@ -128,30 +152,7 @@ function unlockOffer(id) {
     console.error(err);
   });
 }
-[12:14, 9. 2. 2026] Kateřina S.: function doPost(e) {
-  const email = e.parameter.email;
-  const offer = e.parameter.offer;
-  const type = e.parameter.type;
+</script>
 
-  MailApp.sendEmail({
-    to: email,
-    subject: "Platba za odemknutí kontaktu – Klik na úklid",
-    body: `
-Dobrý den,
-
-pro odemknutí kontaktu k nabídce č. ${offer} proveďte platbu:
-
-Částka: 99 Kč
-Účet: XXXXXXXX/XXXX
-VS: ${Date.now()}
-
-Po přijetí platby bude kontakt automaticky zpřístupněn.
-
-Klik na úklid
-`
-  });
-
-  return ContentService
-    .createTextOutput("OK")
-    .setMimeType(ContentService.MimeType.TEXT);
-}
+</body>
+</html>
