--- a/nabidky.html
+++ b/nabidky.html
@@ -3,39 +3,54 @@
 <head>
 <meta charset="UTF-8">
 <title>Nabídky úklidu | Klik na úklid</title>
-
 <style>
-body { font-family: Arial, sans-serif; margin: 20px; }
-h1 { text-align: center; }
-table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-th { background-color: #4a148c; color: white; }
-tr:nth-child(even) { background: #f9f9f9; }
-.lock { color: #888; font-style: italic; }
-
-button {
-  background:#4a148c;
-  color:#fff;
-  border:0;
-  padding:6px 10px;
-  cursor:pointer;
-  border-radius:4px;
+body {
+  font-family: Arial, sans-serif;
+  background: #f5f5f7;
+  margin: 20px;
 }
-button:hover { background:#6a1b9a; }
+h1 {
+  text-align: center;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 20px;
+}
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  font-size: 14px;
+}
+th {
+  background: #243a8f;
+  color: white;
+}
+button.unlock-btn {
+  background: #007bff;
+  color: white;
+  border: none;
+  padding: 6px 10px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+button.unlock-btn:hover {
+  background: #0056b3;
+}
+.lock {
+  color: #888;
+  font-style: italic;
+}
 </style>
 </head>
 
 <body>
-
 <h1>Nabídky úklidu</h1>
-<p style="text-align:center;">
-Kontakty jsou skryté 🔒 (po zaplacení se odemknou)
-</p>
+<p style="text-align:center;">Kontakty jsou skryté 🔒 – odemknou se po zaplacení</p>
 
-<table id="nabidkyTable">
+<table id="offersTable">
   <thead>
     <tr>
-      <th>Vložení</th>
       <th>Město / lokalita</th>
       <th>Dojezd (km)</th>
       <th>Typ úklidu</th>
@@ -50,94 +65,67 @@ Kontakty jsou skryté 🔒 (po zaplacení se odemknou)
 </table>
 
 <script>
-// 👉 CSV z Google Sheets
-const sheetUrl =
-"https://docs.google.com/spreadsheets/d/e/2PACX-1vRc1EKWsR4iHnhk1PSgVAQ5u_YfM481jOzs9mxzXLvIZ0bhtz0TFRAAzw_15LJhvNSpyzb6dMA6IK0r/pub?output=csv";
+// === URL tvého Apps Script API (GET i POST) ===
+const API_URL = "https://script.google.com/macros/s/AKfycbwE0EZp1L-DNUa4h47cDPgS9DDbpGwPFfKdrgPoCKcrXRA80g6xNWFeA1liEj6A7UQw-g/exec";
 
-// 👉 URL nové webové aplikace (Apps Script)
-const scriptUrl =
-"https://script.google.com/macros/s/AKfycbzKOqkpSn80e58EXp1DbS5oZ-qLKMeq9HaBGRicD7QCwmYV0-BFsfPUQrXBmtMsCsdk/exec";
-
-// jednoduchý CSV parser
-function parseCSV(text) {
-  const rows = [];
-  let row = [], cell = "", inside = false;
-
-  for (let char of text) {
-    if (char === '"') inside = !inside;
-    else if (char === "," && !inside) {
-      row.push(cell); cell = "";
-    } else if (char === "\n" && !inside) {
-      row.push(cell); rows.push(row);
-      row = []; cell = "";
-    } else {
-      cell += char;
-    }
-  }
-  if (cell) row.push(cell);
-  if (row.length) rows.push(row);
-  return rows;
-}
-
-// načtení tabulky
-fetch(sheetUrl)
-  .then(res => res.text())
-  .then(csv => {
-    const data = parseCSV(csv);
-    const rows = data.slice(1); // bez hlavičky
+// 1) NAČTEME DATA (GET → JSON)
+fetch(API_URL)
+  .then(res => res.json())
+  .then(data => {
+    const tbody = document.querySelector("#offersTable tbody");
     let html = "";
 
-    rows.forEach((cols, i) => {
-      if (!cols.length) return;
-
+    data.forEach((item, index) => {
       html += `
         <tr>
-          <td>${cols[0] || ""}</td>
-          <td>${cols[4] || ""}</td>
-          <td>${cols[5] || ""}</td>
-          <td>${cols[6] || ""}</td>
-          <td>${cols[7] || ""}</td>
-          <td>${cols[8] || ""}</td>
-          <td>${cols[9] || ""}</td>
-          <td>${cols[10] || ""}</td>
+          <td>${item.mesto || ""}</td>
+          <td>${item.dojezd || ""}</td>
+          <td>${item.typUklidu || ""}</td>
+          <td>${item.dostupnost || ""}</td>
+          <td>${item.cena || ""}</td>
+          <td>${item.zkusenost || ""}</td>
+          <td>${item.poznamka || ""}</td>
           <td>
-            <button onclick="unlockOffer(${i})">
-              🔓 Odemknout kontakt (99 Kč)
+            <button class="unlock-btn" onclick="unlockContact(${index})">
+              🔓 Odemknout kontakt
             </button>
           </td>
         </tr>
       `;
     });
 
-    document.querySelector("#nabidkyTable tbody").innerHTML = html;
+    tbody.innerHTML = html;
   })
   .catch(err => {
-    console.error(err);
-    alert("Nepodařilo se načíst data z tabulky.");
+    console.error("Chyba načítání dat:", err);
   });
 
-// odeslání e-mailu přes Apps Script
-function unlockOffer(id) {
-  const email = prompt("Zadejte e-mail pro zaslání platebních údajů:");
+// 2) FUNKCE PRO ODEMČENÍ
+function unlockContact(offerId) {
+  const email = prompt("Zadejte e-mail, kam vám mají přijít platební údaje:");
   if (!email) return;
 
-  fetch(scriptUrl, {
+  // připravíme POST tělo
+  const body = {
+    email: email,
+    type: "nabidka",
+    offerId: offerId
+  };
+
+  fetch(API_URL, {
     method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      email: email,
-      offer: id,
-      type: "nabidka"
-    })
+    body: JSON.stringify(body),
+    headers: {
+      "Content-Type": "application/json"
+    }
   })
-  .then(res => res.text())
-  .then(text => {
-    console.log("Apps Script odpověď:", text);
-    alert("Pokyny k platbě byly odeslány. Zkontrolujte e-mail (i spam).");
+  .then(res => res.json())
+  .then(result => {
+    alert("Pokyny k platbě byly odeslány na e-mail 📩");
   })
   .catch(err => {
-    console.error(err);
-    alert("Chyba při odesílání e-mailu.");
+    console.error("Chyba při odesílání:", err);
+    alert("Něco se nepovedlo 😕");
   });
 }
 </script>
